# firebaseauth-py

./: README.md  example.py  pyproject.toml  setup.cfg  upload.sh
firebaseauth_py/: __init__.py  errors.py  firebase_auth.py
