[tool.poetry]
name = "firebaseauth-py"
version = "0.0.3"
description = "API wrapper for Firebase Auth REST API"
authors = ["Justin Chiou <chiou.kai@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
