[metadata]
name = firebaseauth_py
version = 0.0.3
description = An unofficial wrapper for Firebase Auth's REST API, written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/shadowlion/firebaseauth-py
project_urls=
    Source=https://github.com/shadowlion/firebaseauth-py

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
install_requires =
    importlib; python_version >= "3.8"
